results/SVCOMP/specgen/log-URLDecoder02-2024_03_07_17_24_20.txt
public class URLDecoder02 {

    //@ requires \typeof(Verifier.nondetString()) == \type(String);
    //@ ensures \result ==> (\exists String s1; s1.equals(Verifier.nondetString() + "some-url") && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && !s2.startsWith("some")));
    //@ ensures !\result ==> (\forall String s1; !s1.equals(Verifier.nondetString() + "some-url") || (\forall String s2; !s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) || s2.startsWith("some")));
    public static boolean f(String arg) {

        String s1 = Verifier.nondetString() + "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:3: error: cannot find symbol
    //@ requires \typeof(Verifier.nondetString()) == \type(String);
                         ^
  symbol:   variable Verifier
  location: class URLDecoder02
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:4: error: cannot find symbol
    //@ ensures \result ==> (\exists String s1; s1.equals(Verifier.nondetString() + "some-url") && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && !s2.startsWith("some")));
                                                          ^
  symbol:   variable Verifier
  location: class URLDecoder02
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:5: error: cannot find symbol
    //@ ensures !\result ==> (\forall String s1; !s1.equals(Verifier.nondetString() + "some-url") || (\forall String s2; !s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) || s2.startsWith("some")));
                                                            ^
  symbol:   variable Verifier
  location: class URLDecoder02
/home/max/Documents/JMLGPT/tmp/URLDecoder02.java:8: error: cannot find symbol
        String s1 = Verifier.nondetString() + "some-url";
                    ^
  symbol:   variable Verifier
  location: class URLDecoder02
4 errors

public class URLDecoder02 {

    //@ requires \typeof(arg) == \type(String);
    //@ ensures \result ==> (\exists String s1; s1.equals(arg + "some-url") && (\exists String s2; s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) && !s2.startsWith("some")));
    //@ ensures !\result ==> (\forall String s1; !s1.equals(arg + "some-url") || (\forall String s2; !s2.equals(java.net.URLDecoder.decode(s1, "UTF-8")) || s2.startsWith("some")));
    public static boolean f(String arg) {

        String s1 = arg + "some-url";

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
